Included the tranding component and fixed some styles, not responsive yet

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -15,13 +15,10 @@
   width: 100%;
   margin: 0;
   height: 6.5rem;
-  background-color: rgba(48, 115, 186, 0.3);;
+  background-color: rgba(48, 115, 186, 0.3);
   font-size: 4.5rem;
   display: flex;
-  justify-content: center ;
+  justify-content: center;
   align-items: center;
   color: white;
-}
-strong {
-  color: #00909e;
 }
